# AutonomicFarm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plot_logs.py  requirements.txt
doc/: Doxyfile
include/: Action.hpp  Analyser.hpp  AutonomicFarm.hpp  CircularVector.hpp  IExecutor.hpp  IMonitor.hpp  IMonitoredFarm.hpp  MonitorInfo.hpp  MonitorLogger.hpp  Planner.hpp  SharedQueue.hpp  Task.hpp  TypedTask.hpp
include/fastflow/: Executor.hpp  Monitor.hpp  MonitoredFarm.hpp
include/native/: Executor.hpp  Farm.hpp  Monitor.hpp  MonitoredFarm.hpp
native_af/: CMakeLists.txt
native_af/include/: Action.hpp  Analyser.hpp  AutonomicFarm.hpp  CircularVector.hpp  Executor.hpp  Farm.hpp  Manager.hpp  Monitor.hpp  MonitorInfo.hpp  MonitorLogger.hpp  MonitoredFarm.hpp  Planner.hpp  SharedQueue.hpp  Task.hpp  TypedTask.hpp
native_af/src/: Analyser.cpp  AutonomicFarm.cpp  Executor.cpp  Farm.cpp  Manager.cpp  Monitor.cpp  MonitorLogger.cpp  MonitoredFarm.cpp  Planner.cpp
src/: Analyser.cpp  AutonomicFarm.cpp  IMonitor.cpp  MonitorLogger.cpp  Planner.cpp
src/fastflow/: Executor.cpp  Monitor.cpp  MonitoredFarm.cpp
src/native/: Executor.cpp  Farm.cpp  Monitor.cpp  MonitoredFarm.cpp
test/: CMakeLists.txt  test1.cpp  test_fastflow.cpp  test_manager.cpp  test_monitor.cpp  test_native.cpp
test/fastflow/: test_fastflow.cpp  test_fastflow_latency.cpp
test/native/: test_native.cpp  test_native_latency.cpp  test_queue_recovery.cpp
